## Makefile.am -- Process this file with automake to produce Makefile.in

## EXTRA_DIST contains the files automake does not know about, 
## that need to go in the distribution.

# These files make up the home page. 

EXTRA_DIST = yacas-screenshot.png \
        todo.html downloads.html.in \
	bugs.txt README \
	paper1.tex paper2.tex 

## The file "yacaslogo.gif" is used in the HTML documentation

htmldir = $(scriptdir)/documentation
html_DATA = yacaslogo.gif


