## Makefile.am -- Process this file with automake to produce Makefile.in

## EXTRA_DIST contains the files automake does not know about, 
## that need to go in the distribution.

# These files make up the home page. 

EXTRA_DIST = \
	about.html basicindex.html changes.html \
	consoleedit.html consoleview.html credits.html faq.html \
	gpl.html homepage.html jslog.js links.html \
	placeholder.html plain.html recent.html \
	tabber.css tabber.js tutorials.html yacas.css yacas.html \
	yacas.js datahub.js yacaslogo.gif journal.js \
	tutorials/tutorialtext1.html \
	journal/derivative.ys journal/derivative1.html journal/derivativedescr.html \
	journal/foreword001descr.html \
	yacas-screenshot.png \
        todo.html downloads.html.in \
	bugs.txt README \
	paper1.tex paper2.tex 

## The file "yacaslogo.gif" is used in the HTML documentation

htmldir = $(scriptdir)/documentation
html_DATA = yacaslogo.gif


